pfish       2005/10/15 23:51:27 UTC	(20051015-2893)
  Log:
  fix help_addentry
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/listmail.c (File Modified) 


nenolod     2005/10/15 22:23:05 UTC	(20051015-2891)
  Log:
  Apply more niceities for sun boxes.

  Changes:	Modified:
  +0 -2		trunk/Makefile.in (File Modified) 
  +33 -3	trunk/configure (File Modified) 
  +1 -0		trunk/configure.ac (File Modified) 


nenolod     2005/10/15 07:22:36 UTC	(20051015-2889)
  Log:
  Update install document :p

  Changes:	Modified:
  +21 -9	trunk/INSTALL (File Modified) 


nenolod     2005/10/15 04:34:36 UTC	(20051015-2887)
  Log:
  I hate Solaris.
  

  Changes:	Modified:
  +2 -2		trunk/src/Makefile.in (File Modified) 


nenolod     2005/10/14 22:42:00 UTC	(20051014-2885)
  Log:
  Apply some niceities for sun boxes.
  

  Changes:	Modified:
  +3967 -0	trunk/configure (File Modified) 
  +49 -0	trunk/configure.ac (File Modified) 
  +0 -7		trunk/include/libatheme.h (File Modified) 
  +45 -0	trunk/include/sysconf.h.in (File Modified) 


nenolod     2005/10/14 21:50:46 UTC	(20051014-2883)
  Log:
  Improved setup script. :P
  

  Changes:	Modified:
  +6 -0		trunk/.logo (File Added) 
  +8 -9		trunk/setup (File Modified) 


kuja        2005/10/14 04:53:40 UTC	(20051014-2881)
  Log:
  Added helper.c and override.c to the compilation

  Changes:	Modified:
  +4 -2		trunk/modules/helpserv/Makefile.in (File Modified) 


kuja        2005/10/14 04:52:44 UTC	(20051014-2879)
  Log:
  Added OVERRIDE (add or remove override metadata, helpers only) command

  Changes:	Modified:
  +70 -0	trunk/modules/helpserv/override.c (File Added) 


kuja        2005/10/14 04:11:59 UTC	(20051014-2877)
  Log:
  Added HELPER (add or remove helpers, SRA only) command

  Changes:	Modified:
  +80 -0	trunk/modules/helpserv/helper.c (File Added) 


kuja        2005/10/14 03:37:41 UTC	(20051014-2875)
  Log:
  Added support for MU_HELPER flag

  Changes:	Modified: